--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
 
     <!-- Point A Sphere -->
-    <a-entity gps-entity-place="latitude: LAT_A; longitude: LON_A">
+    <a-entity gps-entity-place="latitude: latitude: 51.2993; longitude: 9.491">
       <a-sphere color="red" radius="1"></a-sphere>
     </a-entity>
 
     <!-- Point B Sphere -->
-    <a-entity gps-entity-place="latitude: LAT_B; longitude: LON_B">
+    <a-entity gps-entity-place="latitude: latitude: 48.6784; longitude: 10.1523">
       <a-sphere color="blue" radius="1"></a-sphere>
     </a-entity>
 
