--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AR.js GPS Example</title>
+  <title>AR.js GPS Example with Distance and Direction</title>
   <!-- Include A-Frame Library -->
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <!-- Include AR.js Library -->
@@ -14,23 +14,99 @@
     vr-mode-ui="enabled: false"
     renderer="logarithmicDepthBuffer: true;"
     arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
+    
+    <!-- Camera with GPS -->
+    <a-camera gps-camera rotation-reader></a-camera>
 
-    <!-- Point A Sphere -->
-    <a-entity gps-entity-place="latitude: latitude: 51.2993; longitude: 9.491">
+    <!-- Location A Sphere -->
+    <a-entity id="locationA" gps-entity-place="latitude: 51.2993; longitude: 9.491">
       <a-sphere color="red" radius="1"></a-sphere>
     </a-entity>
 
-    <!-- Point B Sphere -->
-    <a-entity gps-entity-place="latitude: latitude: 48.6784; longitude: 10.1523">
+    <!-- Location A Text -->
+    <a-entity id="textA" position="0 2 -5" text="value: ; color: #FFFFFF;"></a-entity>
+
+    <!-- Location B Sphere -->
+    <a-entity id="locationB" gps-entity-place="latitude: 48.6784; longitude: 10.1523">
       <a-sphere color="blue" radius="1"></a-sphere>
     </a-entity>
 
-    <!-- Intermediate Points (Optional) -->
-    <!-- Add as many as needed -->
-    <a-entity gps-entity-place="latitude: LAT_INTER; longitude: LON_INTER">
-      <a-sphere color="green" radius="0.5"></a-sphere>
-    </a-entity>
+    <!-- Location B Text -->
+    <a-entity id="textB" position="0 1.5 -5" text="value: ; color: #FFFFFF;"></a-entity>
 
   </a-scene>
+
+  <script>
+    let userPosition = null;
+
+    // Listen for user's position updates
+    document.querySelector('[gps-camera]').addEventListener('gps-camera-update-position', (e) => {
+      userPosition = {
+        latitude: e.detail.position.latitude,
+        longitude: e.detail.position.longitude
+      };
+      updateDistancesAndDirections();
+    });
+
+    function updateDistancesAndDirections() {
+      if (!userPosition) return;
+
+      // Location A Coordinates
+      const locA = { latitude: 51.2993, longitude: 9.491 };
+      // Location B Coordinates
+      const locB = { latitude: 48.6784, longitude: 10.1523 };
+
+      // Calculate distance and bearing to Location A
+      const distanceToA = calculateDistance(userPosition, locA);
+      const bearingToA = calculateBearing(userPosition, locA);
+
+      // Calculate distance and bearing to Location B
+      const distanceToB = calculateDistance(userPosition, locB);
+      const bearingToB = calculateBearing(userPosition, locB);
+
+      // Update text entities
+      const textA = document.getElementById('textA');
+      textA.setAttribute('text', 'value', `Location A\nDistance: ${distanceToA.toFixed(2)} km\nBearing: ${bearingToA.toFixed(2)}°`);
+
+      const textB = document.getElementById('textB');
+      textB.setAttribute('text', 'value', `Location B\nDistance: ${distanceToB.toFixed(2)} km\nBearing: ${bearingToB.toFixed(2)}°`);
+    }
+
+    // Function to calculate distance between two coordinates (Haversine formula)
+    function calculateDistance(coord1, coord2) {
+      const R = 6371; // Radius of the Earth in km
+      const dLat = deg2rad(coord2.latitude - coord1.latitude);
+      const dLon = deg2rad(coord2.longitude - coord1.longitude);
+      const a =
+        Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+        Math.cos(deg2rad(coord1.latitude)) * Math.cos(deg2rad(coord2.latitude)) *
+        Math.sin(dLon / 2) * Math.sin(dLon / 2);
+      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+      const distance = R * c; // Distance in km
+      return distance;
+    }
+
+    // Function to calculate bearing between two coordinates
+    function calculateBearing(coord1, coord2) {
+      const lat1 = deg2rad(coord1.latitude);
+      const lat2 = deg2rad(coord2.latitude);
+      const dLon = deg2rad(coord2.longitude - coord1.longitude);
+
+      const y = Math.sin(dLon) * Math.cos(lat2);
+      const x = Math.cos(lat1) * Math.sin(lat2) -
+                Math.sin(lat1) * Math.cos(lat2) * Math.cos(dLon);
+      const bearingRad = Math.atan2(y, x);
+      const bearingDeg = (rad2deg(bearingRad) + 360) % 360; // Normalize to 0-360
+      return bearingDeg;
+    }
+
+    function deg2rad(deg) {
+      return deg * (Math.PI / 180);
+    }
+
+    function rad2deg(rad) {
+      return rad * (180 / Math.PI);
+    }
+  </script>
 </body>
 </html>
