--- a/index.html
+++ b/index.html
@@ -1,112 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AR.js GPS Example with Distance and Direction</title>
-  <!-- Include A-Frame Library -->
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <!-- Include AR.js Library -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/3.3.2/aframe/build/aframe-ar.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Outdoor AR Navigation</title>
+  
+  <!-- A-Frame and AR.js Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/aframe@1.3.0/dist/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@ar-js-org/ar.js@3.3.2/aframe/build/aframe-ar-nft.js"></script>
+  
+  <!-- Required for location-based AR -->
+  <script src="https://cdn.jsdelivr.net/npm/@ar-js-org/ar.js@3.3.2/aframe/build/aframe-ar.js"></script>
+  
+  <!-- Look-at component so markers can face the user -->
+  <script src="https://unpkg.com/aframe-look-at-component@1.0.0/dist/aframe-look-at-component.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <a-scene
-    embedded
-    vr-mode-ui="enabled: false"
+  <a-scene 
+    embedded 
+    vr-mode-ui="enabled: false" 
     renderer="logarithmicDepthBuffer: true;"
-    arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
-    
-    <!-- Camera with GPS -->
+    arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;"
+  >
+    <!-- Example AR marker placed at a GPS coordinate -->
+    <!-- Replace latitude & longitude with your desired location -->
+    <a-entity gps-entity-place="latitude: 37.7749; longitude: -122.4194;">
+      <!-- A simple red cone to represent a navigation marker -->
+      <a-entity 
+        geometry="primitive: cone; height: 2; radiusBottom: 0.5; radiusTop: 0;"
+        material="color: red; opacity: 0.8;"
+        look-at="[gps-camera]"
+      ></a-entity>
+    </a-entity>
+
+    <!-- The camera that automatically adjusts according to the user’s GPS and orientation -->
     <a-camera gps-camera rotation-reader></a-camera>
-
-    <!-- Location A Sphere -->
-    <a-entity id="locationA" gps-entity-place="latitude: 51.2993; longitude: 9.491">
-      <a-sphere color="red" radius="1"></a-sphere>
-    </a-entity>
-
-    <!-- Location A Text -->
-    <a-entity id="textA" position="0 2 -5" text="value: ; color: #FFFFFF;"></a-entity>
-
-    <!-- Location B Sphere -->
-    <a-entity id="locationB" gps-entity-place="latitude: 48.6784; longitude: 10.1523">
-      <a-sphere color="blue" radius="1"></a-sphere>
-    </a-entity>
-
-    <!-- Location B Text -->
-    <a-entity id="textB" position="0 1.5 -5" text="value: ; color: #FFFFFF;"></a-entity>
-
   </a-scene>
-
-  <script>
-    let userPosition = null;
-
-    // Listen for user's position updates
-    document.querySelector('[gps-camera]').addEventListener('gps-camera-update-position', (e) => {
-      userPosition = {
-        latitude: e.detail.position.latitude,
-        longitude: e.detail.position.longitude
-      };
-      updateDistancesAndDirections();
-    });
-
-    function updateDistancesAndDirections() {
-      if (!userPosition) return;
-
-      // Location A Coordinates
-      const locA = { latitude: 51.2993, longitude: 9.491 };
-      // Location B Coordinates
-      const locB = { latitude: 48.6784, longitude: 10.1523 };
-
-      // Calculate distance and bearing to Location A
-      const distanceToA = calculateDistance(userPosition, locA);
-      const bearingToA = calculateBearing(userPosition, locA);
-
-      // Calculate distance and bearing to Location B
-      const distanceToB = calculateDistance(userPosition, locB);
-      const bearingToB = calculateBearing(userPosition, locB);
-
-      // Update text entities
-      const textA = document.getElementById('textA');
-      textA.setAttribute('text', 'value', `Location A\nDistance: ${distanceToA.toFixed(2)} km\nBearing: ${bearingToA.toFixed(2)}°`);
-
-      const textB = document.getElementById('textB');
-      textB.setAttribute('text', 'value', `Location B\nDistance: ${distanceToB.toFixed(2)} km\nBearing: ${bearingToB.toFixed(2)}°`);
-    }
-
-    // Function to calculate distance between two coordinates (Haversine formula)
-    function calculateDistance(coord1, coord2) {
-      const R = 6371; // Radius of the Earth in km
-      const dLat = deg2rad(coord2.latitude - coord1.latitude);
-      const dLon = deg2rad(coord2.longitude - coord1.longitude);
-      const a =
-        Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-        Math.cos(deg2rad(coord1.latitude)) * Math.cos(deg2rad(coord2.latitude)) *
-        Math.sin(dLon / 2) * Math.sin(dLon / 2);
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-      const distance = R * c; // Distance in km
-      return distance;
-    }
-
-    // Function to calculate bearing between two coordinates
-    function calculateBearing(coord1, coord2) {
-      const lat1 = deg2rad(coord1.latitude);
-      const lat2 = deg2rad(coord2.latitude);
-      const dLon = deg2rad(coord2.longitude - coord1.longitude);
-
-      const y = Math.sin(dLon) * Math.cos(lat2);
-      const x = Math.cos(lat1) * Math.sin(lat2) -
-                Math.sin(lat1) * Math.cos(lat2) * Math.cos(dLon);
-      const bearingRad = Math.atan2(y, x);
-      const bearingDeg = (rad2deg(bearingRad) + 360) % 360; // Normalize to 0-360
-      return bearingDeg;
-    }
-
-    function deg2rad(deg) {
-      return deg * (Math.PI / 180);
-    }
-
-    function rad2deg(rad) {
-      return rad * (180 / Math.PI);
-    }
-  </script>
 </body>
 </html>
