--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   >
     <!-- Example AR marker placed at a GPS coordinate -->
     <!-- Replace latitude & longitude with your desired location -->
-    <a-entity gps-entity-place="latitude: 37.7749; longitude: -122.4194;">
+    <a-entity gps-entity-place="latitude: 48.677906; longitude: 10.1491652;">
       <!-- A simple red cone to represent a navigation marker -->
       <a-entity 
         geometry="primitive: cone; height: 2; radiusBottom: 0.5; radiusTop: 0;"
